--- a/style.css
+++ b/style.css
@@ -108,7 +108,7 @@ main {
 }
 
 .list {
-      .item {
+    .item {
         background: var(--background-secondary);
         padding: 1.2rem;
         margin-bottom: 1.2rem;
@@ -150,26 +150,26 @@ main {
             }
         }
 
-        button { 
+        button {
             background: none;
             border: none;
             display: flex;
             align-items: center;
-            cursor: pointer; 
+            cursor: pointer;
 
             img {
                 width: 1.6rem;
                 opacity: 0.7;
             }
         }
-        
+
         label {
             cursor: pointer;
         }
     }
 }
 
-.warning{ 
+.warning {
     background: var(--color-danger);
     color: var(--always-white);
     padding: 1.2rem;
@@ -177,7 +177,7 @@ main {
     justify-content: space-between;
     border-radius: 1.2rem;
     margin-top: 2.4rem;
-    
+
     opacity: 1;
     transform: translateY(0);
     transition: opacity .4rem ease, transform .4rem;
@@ -187,4 +187,15 @@ main {
         align-items: center;
         gap: .8rem;
     }
+
+    i {
+        font-size: 2rem;
+    }
+
+    button {
+        border: none;
+        background: none;
+        color: var(--always-white);
+    }
+
 }
