--- a/style.css
+++ b/style.css
@@ -197,5 +197,9 @@ main {
         background: none;
         color: var(--always-white);
     }
-
 }
+
+ .hide-warning {
+    opacity: 0;
+    transform: translateY(-10px);
+    }
